# examples

3-17Uart配网/: CMakeLists.txt  sdkconfig.old
3-17Uart配网/main/: esp_demo.c
3-24_SoftAP&BLE配网/: README.md
3-3_WIFI/: sdkconfig.old
4-14_ESP-AT/: at_uart_task.c
4-7_Web配网教程/main/: dns_server.c
5-19_HTTP-Client/: sdkconfig  sdkconfig.old
5-19_HTTP-Client/main/: CMakeLists.txt  esp_http_client_example.c
5-26_MQTT/: README.md  sdkconfig.old
5-6_TCP-Client/: sdkconfig
6-2_GATT-server/: README.md  sdkconfig  sdkconfig.old
6-2_GATT-server/main/: gatts_demo.c
6-9_GATT_Client/: sdkconfig  sdkconfig.old
6-9_GATT_Client/main/: gattc_demo.c
7-13_ESP_Mesh_Lite_node/: sdkconfig  sdkconfig.old
7-13_ESP_Mesh_Lite_node/common/app_wifi/: CMakeLists.txt
7-13_ESP_Mesh_Lite_node/main/: Kconfig.projbuild  app_main.c
7-13_ESP_Mesh_Lite_node/sdkconfig_defaults/: sdkconfig.defaults.esp32s3
7-13_ESP_Mesh_Lite_root/: README_CN.md  sdkconfig
7-21_I2c_Simple/: CMakeLists.txt  sdkconfig  sdkconfig.old
7-27_oneshot_read/: sdkconfig
TCP-Client/: sdkconfig.old
TCP-Server/: README.md
UDP数据通信/: sdkconfig
UDP数据通信/main/: udp_client.c
WIFI/: CMakeLists.txt
at_uart/: app_main.c  readme.md
captive_portal/: README.md  sdkconfig  sdkconfig.old
esp_http_client/: README.md
mqtt/: README.md  sdkconfig
smart_config/: README.md
tcp_client/: README.md
tcp_server/: README.md  sdkconfig
uart配网/: README.md  sdkconfig
udp_client/: README.md  sdkconfig.old
wifi_demo/: README.md  sdkconfig
wifi_prov_mgr/: README.md  sdkconfig  sdkconfig.old
一键配网/: README.md
(+49 files in other folders)
